--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -134,7 +134,7 @@ Finally the modified matrix removes the central mixed reality section from the o
 
 %=========================================================================================================
 
-\subsection{Adopted Alternate Reality Definitions}
+\section{Adopted Alternate Reality Definitions}
 \label{summaryofalternaterealitydefinitions}
 
 Table \ref{adopted-alternate-reality-definitions} presents the basic categories of alternate reality and their definitions as a product of the survey and update of the frameworks explored thus far. This table does not claim to present an exhaustive list of \textit{all} categories of alternate reality; rather, it presents the fundamental set of common categories that are required to move forward with the framing of parallel reality in a well grounded fashion. Terms such as HyperReality~\cite{Terashima2001} (capitalization important, to differentiate from the postmodern term `hyperreality'~\cite{Baudrillard1994}) are intentionally excluded due to their limited applications and exposure in the literature.
@@ -142,7 +142,6 @@ Table \ref{adopted-alternate-reality-definitions} presents the basic categories 
 %HyperReality (HR) is the term given to a hypothetical communications infrastructure that allows the seamless commingling of reality and virtual reality, human intelligence and artificial intelligence. In terms of the previously explored alternate reality terms, a HR system is most accurately described as facilitating the creation of mixed reality environments that bring virtual reality content into real world locations $-$ \textit{``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR as well as, not instead of, PR''}~\cite{Terashima2001}.
 
 %HR is an abstract, high level term that refers to a category of mixed reality environments that combine VR content with views of the real world in a manner that arguably falls under the moniker of augmented reality, however HR places emphasis on the integration of the virtual reality content into the real world in a seamless manner, such that HR enables hyperreality (this latter non-capitalised term referring to the postmodern usage of the word wherein an observer is unable to distinguish reality from a simulation of reality~\cite{Baudrillard1994}).
-
 
 %=========================================================================================================
 
@@ -189,7 +188,7 @@ Modulated Reality & Platforms that aim to modify the user's view, by multiplicat
 
 Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1999, Want2009}. One of the fundamental primary environments, occupying an endpoint of the reality-virtuality continuum. \\
 
- & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using HMD and body tracking techniques to remove logical anchors to the real world\footnote{\url{http://www.techcastglobal.com/documents/10193/34869/++Aaron/aade1a72-900b-4261-9214-061fba89053d}}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via traditional computer monitors as rudimentary implementations of virtual reality - \textit{``a virtual reality accessed through standard personal computers is arguably very much in evidence in computer games''}~\cite{Green2014}. \\
+& While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using HMD and body tracking techniques to remove logical anchors to the real world\footnote{\url{http://www.techcastglobal.com/documents/10193/34869/++Aaron/aade1a72-900b-4261-9214-061fba89053d}}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via traditional computer monitors as rudimentary implementations of virtual reality - \textit{``a virtual reality accessed through standard personal computers is arguably very much in evidence in computer games''}~\cite{Green2014}. \\
 		
 \midrule
 
@@ -235,16 +234,18 @@ Augmented Virtuality (AV) & A mixed reality environment that features a virtual 
 
 %=========================================================================================================
 
-\section{Introducing a New Alternate Reality}
+%\section{Introducing a New Alternate Reality}
 
-With the sound understanding of the ecosystem of alternate realities provided by the preceding sections, parallel reality can now be introduced and situated accordingly. In order to do so, it is necessary to properly introduce one additional category of alternate reality, that of \textit{cross reality}. This is a more recent addition to the field of alternate realities, with its roots in the mid to late 2000s, than more familiar terms such as augmented reality. However as one of its fundamental aspects is shared with parallel reality its inclusion in this discussion is required.
+
 
 %=========================================================================================================
 
-\subsection{Cross Reality}
+\section{Cross Reality}
 \label{sec_crossreality}
 
 \newcommand{\SLfootnote}{\footnote{Second Life.}}
+
+With the sound understanding of the ecosystem of alternate realities provided by the preceding sections, parallel reality can now be introduced and situated accordingly. In order to do so, it is necessary to properly introduce one additional category of alternate reality, that of \textit{cross reality}. This is a more recent addition to the field of alternate realities, with its roots in the mid to late 2000s, than the more familiar terms covered in previous sections. However as one of its fundamental aspects is shared with parallel reality its inclusion in this discussion is required.
 
 Cross reality (XR~\cite{kim:practical}) is a mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with a complete virtual environment, facilitating synchronous bidirectional exchange of media and control information between real and virtual environments. Cross reality systems feature two environments, one real and one virtual, both complete unto themselves~\cite{lifton:merging} but enriched by their ability to mutually reflect, influence and merge into one another thanks to bidirectional information flow between them~\cite{kim:practical}. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}, such that actions within the virtual environment can have `extravirtual effects'~\cite{Soraker2010} upon the real environment and vice-versa.
 
@@ -267,6 +268,14 @@ It was the subsequent work of the Responsive Environments Group at MIT's Media L
 
 \footnotetext{ \url{http://resenv.media.mit.edu/portals/} }
 
+A potential source of standardization for the implementation of cross reality systems such as these that leveraged virtual world technology such as Second Life was presented by ISO/IEC 23005 (also referred to as MPEG-V), whose creation aimed to \textit{``enable the interoperability between virtual worlds \ldots\ and with the real world''} including through the use of \textit{``sensors, actuators, vision and rendering''}~\cite{InternationalOrganizationforStandardization2011}.
+
+The concept of a bidirectional connection between real and virtual environments, but which did not remove the boundaries that defined them, was also the basis of the `interreality' concept, in which user behaviour in the real world would influence the virtual environment that was used as part of a neuropsychological rehabilitation program~\cite{Giuseppe2014a}.
+
+%=========================================================================================================
+
+\subsection{The Vacancy Problem}
+
 One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem':
 
 \begin{quote}
@@ -279,13 +288,9 @@ The Shadow Lab addressed the vacancy problem via the sensor/actuator infrastruct
 	\textit{``One of the main problems with \ldots\ virtual reality is what to do about the body that is left behind in physical reality \ldots\ In HyperReality a person by definition is perceptually aware of the physical world around them, yet part of the attention normally given to the physical reality is given to interacting with virtual reality. It is difficult as yet to see how much this matters, but the increasing use of the mobile phone, which is a primitive form of HR\footnote{HyperReality}, gives us some feel for the issues. People using a mobile phone can walk busy streets \ldots\ while talking to someone who is not there.''}~\cite{Terashima2001}
 \end{quote}
 
-A potential source of standardization for the implementation of cross reality systems such as these that leveraged virtual world technology such as Second Life was presented by ISO/IEC 23005 (also referred to as MPEG-V), whose creation aimed to \textit{``enable the interoperability between virtual worlds \ldots\ and with the real world''} including through the use of \textit{``sensors, actuators, vision and rendering''}~\cite{InternationalOrganizationforStandardization2011}.
-
-The concept of a bidirectional connection between real and virtual environments, but which did not remove the boundaries that defined them, was also the basis of the `interreality' concept, in which user behaviour in the real world would influence the virtual environment that was used as part of a neuropsychological rehabilitation program~\cite{Giuseppe2014a}.
-
 %=========================================================================================================
 
-\subsubsection{Alternate Reality Definitions from Cross Reality}
+\subsection{Alternate Reality Definitions from Cross Reality}
 
 Lifton's use of alternate reality terminology does not directly conclude that mixed reality is a broad term encompassing both augmented reality and augmented virtuality, but defines it as an environment:
 
@@ -322,7 +327,7 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 
 %=========================================================================================================
 
-\subsubsection{Position of Cross Reality}
+\subsection{Position of Cross Reality}
 
 \label{positionofcrossreality}
 
@@ -387,7 +392,7 @@ In relation to the vacancy problem, in scenarios wherein interaction with both r
 
 %=========================================================================================================
 
-\subsection{Parallel Reality}
+\section{Parallel Reality}
 \label{parallelrealityinbackground}
 \newcommand{\PRfootnote}{\footnote{Note that the use of `PR' in the quotation in section \ref{subsec_HyperReality} is a reference to `physical reality' (that author's term for what this thesis simply calls `reality') and is not a reference to parallel reality.}}
 
@@ -401,10 +406,10 @@ The discussion in the previous section highlighted that the first distinguishing
 	\end{center}
 \end{figure}
 
-While the parallel reality concept introduced by this thesis also features two discrete environments, one real and one virtual, that users can transition between visually observing, it does not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment). Thus, this concept could not be considered cross reality as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} (PR) is instead proposed to describe the new concept. Parallel reality is thus defined as:
+While the parallel reality concept introduced by this thesis also features two discrete environments, one real and one virtual, that users can transition between visually observing, it does not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment). Thus, this concept could not be considered cross reality as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} is instead proposed to describe the new concept. Parallel reality is thus defined as:
 
 \begin{quote}
-	\textbf{Parallel Reality (PR):} A system comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them.
+	\textbf{Parallel Reality:} A system comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them.
 \end{quote}
 
 Should a bidirectional information flow be introduced to a parallel reality system, or the ability to transition between receiving visual stimuli from either environment be introduced into a cross reality system, one would in effect produce \textit{parallel cross reality}.
@@ -444,7 +449,30 @@ With the majority of players of popular Massively Multiplayer Online games (MMOs
 
 %=========================================================================================================
 
-\subsection{Additional Alternate Reality Definitions}
+\section{The Case for Parallel Reality}
+\label{caseforpr}
+%ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
+
+A parallel reality system that presents the user with the choice between immersive visual stimuli from both its constituent environments allows that user to engage with both real and virtual content in a manner that is similar to, but has a number of advantages over, previous alternate reality systems, including augmented reality implementations and cross reality systems:
+
+\begin{itemize}
+	\item A parallel reality system is less critical of registration (the accurate positioning/alignment) between real and virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment~\cite{Azuma1997}.
+	\item A parallel reality system can make use of existing virtual reality content without the overhead of decanting/extracting a subset of the virtual components into an augmented reality framework (e.g. manually selecting which objects within the virtual environment are to be displayed over the real environment).
+	\item The use of a complete virtual environment allows virtual content to be more encompassing and immersive, allowing total control over lighting, shadows, reflections, particle effects, etc. which would be difficult or impossible for an augmented/diminished reality platform to render atop a view of a real environment.
+	\item The vacancy problem is further addressed, but instead of doing so by linking real and virtual environments by sensor and actuator infrastructure, vacancy in both environments is alleviated by furnishing users with the ability to transition between perceiving visual stimuli from them both.
+\end{itemize}
+
+Parallel reality platforms are thus well suited to situations in which interaction with the visual stimuli of both real and virtual environments is required and where one or more of the following hold true:
+
+\begin{itemize}
+	\item In lieu of accurate registration between real and virtual, there is a strong focus on the virtual environment's atmosphere and immersion~\cite{deamicis:gamebased}.
+	\item There is existing virtual reality content.
+	\item The visual differences between real and virtual environments are substantial enough that an augmented/diminished reality system would resort to augment or diminish almost the whole real view. While augmented reality \textit{``smears an informational coating over real space''}~\cite{Andersen}, parallel reality presents a complete virtual environment. While augmented reality is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the real environment, parallel reality is better suited to situations wherein one wishes to present a complete virtual alternative.
+\end{itemize}
+
+%=========================================================================================================
+
+\section{Additional Alternate Reality Definitions}
 \label{summaryofadditionalalternaterealitydefinitions}
 
 Table \ref{additional-alternate-reality-definitions} serves as an extension to table \ref{adopted-alternate-reality-definitions} by summarising definitions of the new categories of alternate reality introduced in this section.
@@ -475,7 +503,7 @@ Cross Reality (XR) & Systems that feature two environments, one real and one vir
 
 %=========================================================================================================
 
-Parallel Reality (PR) & Systems comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them. \\
+Parallel Reality & Systems comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them. \\
 
 %\hline
 
@@ -669,30 +697,6 @@ Sensus is expected to be largely task dependent, however when performing a task 
 %\textit{``We see cross-reality precipitating when diverse and ubiquitous sensor and actuator networks meet pervasively shared online virtual worlds, where phenomena freely tunnel between real and contrived continua at a multitude of ``wormholes'' opened by densely deployed networked devices, seamlessly adapting the level of immersion to match a variable ecology of available interfaces and user context or preference.''}~\cite{Lifton2009}
 %\end{quote}
 
-
-
-%=========================================================================================================
-
-\section{The Case for Parallel Reality}
-\label{caseforpr}
-%ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
-
-A parallel reality system that presents the user with the choice between immersive visual stimuli from both its constituent environments allows that user to engage with both real and virtual content in a manner that is similar to, but has a number of advantages over, previous alternate reality systems, including augmented reality implementations and cross reality systems:
-
-\begin{itemize}
-	\item A parallel reality system is less critical of registration (the accurate positioning/alignment) between real and virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment~\cite{Azuma1997}.
-	\item A parallel reality system can make use of existing virtual reality content without the overhead of decanting/extracting a subset of the virtual components into an augmented reality framework (e.g. manually selecting which objects within the virtual environment are to be displayed over the real environment).
-	\item The use of a complete virtual environment allows virtual content to be more encompassing and immersive, allowing total control over lighting, shadows, reflections, particle effects, etc. which would be difficult or impossible for an augmented/diminished reality platform to render atop a view of a real environment.
-	\item The vacancy problem is further addressed, but instead of doing so by linking real and virtual environments by sensor and actuator infrastructure, vacancy in both environments is alleviated by furnishing users with the ability to transition between perceiving visual stimuli from them both.
-\end{itemize}
-
-Parallel reality platforms are thus well suited to situations in which interaction with the visual stimuli of both real and virtual environments is required and where one or more of the following hold true:
-
-\begin{itemize}
-	\item In lieu of accurate registration between real and virtual, there is a strong focus on the virtual environment's atmosphere and immersion~\cite{deamicis:gamebased}.
-	\item There is existing virtual reality content.
-	\item The visual differences between real and virtual environments are substantial enough that an augmented/diminished reality system would resort to augment or diminish almost the whole real view. While augmented reality \textit{``smears an informational coating over real space''}~\cite{Andersen}, parallel reality presents a complete virtual environment. While augmented reality is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the real environment, parallel reality is better suited to situations wherein one wishes to present a complete virtual alternative.
-\end{itemize}
 
 %=========================================================================================================
 
