--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -426,7 +426,7 @@ When comparing head pitch and yaw data between the RW and VR periods within the 
 \end{center}
 \end{table}
 
-Calculating the mean standard deviation in yaw for both RW and VR periods, weighted by the duration of those periods, shows this relationship more analytically. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) and even more so for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are closer for participant 5 due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the weighted mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation of correlation between head movement and environment is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to all of the other participants.
+Calculating the mean standard deviation in yaw for both RW and VR periods, weighted by the duration of those periods, shows this relationship more analytically. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) and even more so for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are closer for participant 5 due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the weighted mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the trend of figure \ref{5_pitch_yaw.png}. The exception to this observation of correlation between head movement and environment is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to all of the other participants.
 
 When considering the amount of time spent perceiving each environment in the parallel reality scenario, several of the participants showed frequent transitioning behaviour where they would perform many transitions and remain perceiving the visual stimuli from each environment for only a few seconds: for participants 1, 4 and 6, the mean times for both RW and VR periods are all between 1.68 and 3.4 seconds. Participant 3 spent longer perceiving each environment with a RW mean of 18.2 seconds and a VR mean of 7 seconds. The outlier is participant 5 with a RW mean of 31.8 seconds and a VR mean of 3.6 seconds; this was the participant who found it uncomfortable to walk while wearing the DK1, so a much longer amount of time spent perceiving RW stimuli is understandable.
 
@@ -1274,7 +1274,7 @@ Mimicking responses from earlier stage interviews, one participant reported expe
 
 \subsection{Log Data}
 
-\subsubsection{Considering all scenarios (seated VR and PR)}
+\subsubsection{Considering all scenarios (seated VR and parallel reality)}
 
 Variance in yaw once again dominated head movement for all participants during all three scenarios (seated and both parallel reality scenarios) over variance in pitch, which is illustrated in figure \ref{14-pitch-yaw-trad-75-25-50-50.png} as an example using participant 14's data showing pitch and yaw against time for the seated VR scenario at left, the 75/25 scenario in the middle and the 50/50 scenario on the right (note that the 75/25 scenario is of substantially longer duration than the other two scenarios, thus the marked difference in appearance at first glance).
 
