--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -449,7 +449,7 @@ With the majority of players of popular Massively Multiplayer Online games (MMOs
 
 %=========================================================================================================
 
-\section{The Case for Parallel Reality}
+\subsection{The Case for Parallel Reality}
 \label{caseforpr}
 %ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
 
